--- a/midterm-amel-dedic/index.html
+++ b/midterm-amel-dedic/index.html
@@ -18,7 +18,7 @@
 
         </header>
         <nav role="navigation">
-            <ul class="mainnav">
+            <ul class="mainnav ">
                 <li class="link"><a href="http://www.w3schools.com/html/default.asp" target="_blank">HTML</a></li>
                 <li class="link"><a href="http://www.w3schools.com/css/default.asp" target="_blank"> CSS</a></li>
                 <li class="link"><a href="http://www.w3schools.com/js/default.asp" target="_blank">Javascript</a></li>
@@ -29,7 +29,7 @@
         <main class="main">
             <section class="col first">
                 <h2>Learning programming </h2>
-                <p><img src="./img/programming1.jpg" alt="How To pick your first lanuages" /> If you haven’t picked your first programming language, the programming world is your oyster. Yet with evangelists for every language telling you their language is the best, choosing one to start with can be incredibly overwhelming. We’ve looked at the data for the top ten programming languages in the US (based on IEEE Spectrum data) to help you pick the best language to start with based on your priorities in lifestyle, location, and career potential.</p>
+                <p><img src="css/programming1.jpg" alt="How To pick your first lanuages" /> If you haven’t picked your first programming language, the programming world is your oyster. Yet with evangelists for every language telling you their language is the best, choosing one to start with can be incredibly overwhelming. We’ve looked at the data for the top ten programming languages in the US (based on IEEE Spectrum data) to help you pick the best language to start with based on your priorities in lifestyle, location, and career potential.</p>
                 <p>Python is a popular, well-paid language, being versatile enough to be used in many different applications, while Javascript is used widely across the country, and can be a good choice if you don’t want to relocate for a job. Although some newer programming languages, such as Swift, are not included, you shouldn’t discount the growth of their popularity. Career opportunities in iOS development using Swift, similar to Android development using Java, will increase as the field of mobile app development continues to expand.</p>
                 <p>Depending on what it is you want to make or do, your choice might already be made up for you. To build a website or webapp, for example, you should learn HTML and CSS, along with JavaScript and perhaps PHP for interactivity</p>
                 <p> If your focus is mostly/only on building a mobile app, then you can dive right into learning Objective-C for iOS apps or how to program with Java for Android </p>
